# store-intelligence-platform

./: .coverage  0.19.0  CHOICES.md  DESIGN.md  Dockerfile  HANDOFF.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.py  scratch_test_telemetry.py
configs/zones/: cam_001.json  cam_003.json  cam_004.json  cam_005.json
dashboard/: app.js  index.html  style.css
dashboard/assets/zones/: cam_001.json  cam_002.json
data/: .gitkeep  generated_events.json  store_intel.db  store_intel.db-shm  store_intel.db-wal  store_intel_backup.db  store_intel_backup_20260530_194257.db  store_intel_backup_20260530_201022.db  store_intel_backup_20260530_201231.db
frontend/: vite.config.js
scripts/: check_cam4.py  extract_sample_frames.py  extract_sql.py  query_db.py  reset_db.py  run_pipeline.py  seed_events.py  seed_remote.py  test_json.py  test_metrics.py  test_read.py  validate_zones.py  video_info.py
src/store_intel/: __init__.py  config.py  logging.py  main.py
src/store_intel/analytics/: __init__.py  anomalies.py  funnel.py  heatmap.py  metrics.py
src/store_intel/api/: __init__.py  anomalies.py  (+9 more)
tests/: conftest.py
tests/fixtures/: sample_events.json
tests/integration/: test_crud_merging.py  test_graceful_degradation.py  test_ingest_api.py  test_metrics_api.py  test_pipeline.py  test_staff_api.py
tests/unit/: test_anomalies.py  test_decoder.py  test_detector.py  test_materializer.py  test_metrics.py  test_pipeline_clustering.py  test_pipeline_methods.py  test_schemas.py  test_staff.py  test_tracker.py  test_visitor.py  test_zone_manager.py
(+16 files in other folders)
