[project]
name = "store-intelligence"
version = "0.1.0"
description = "End-to-end pipeline converting CCTV footage into real-time retail analytics"
requires-python = ">=3.11"
readme = "README.md"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]

# ── Pytest ──────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "-v --tb=short"

# ── Ruff (optional linting) ────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
